Fixed the Layout Alignment Issues while Zooming

--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
 
 * {
-  margin: 0;
+  margin: auto;
   padding: 0;
   font-family: "Poppins", sans-serif;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 ::-webkit-scrollbar{
